new file:   backend/registration/migrations/0009_alter_course_major_id.py 	new file:   backend/registration/migrations/0010_remove_course_major_id_course_majors.py 	new file:   backend/registration/migrations/__pycache__/0007_course_major_id.cpython-312.pyc 	new file:   backend/registration/migrations/__pycache__/0008_alter_course_major_id.cpython-312.pyc 	new file:   backend/registration/migrations/__pycache__/0009_alter_course_major_id.cpython-312.pyc 	new file:   backend/registration/migrations/__pycache__/0010_remove_course_major_id_course_majors.cpython-312.pyc 	new file:   backend/registration/migrations/__pycache__/0010_remove_student_major_student_majors.cpython-312.pyc 	modified:   backend/registration/models.py 	modified:   backend/registration/urls.py 	modified:   backend/templates/registration/course_form.html 	modified:   backend/templates/registration/course_list.html 	modified:   backend/templates/registration/edit_course.html#

--- a/backend/templates/registration/course_list.html
+++ b/backend/templates/registration/course_list.html
@@ -57,7 +57,11 @@
 <table class="schedule-table">
     <thead>
         <tr class="course-title">
-            <td colspan="6"><a href="{% url 'course_detail' course.pk %}">{{ course.name }}</a> - Units: {{ course.credits }}</td>
+            <td colspan="6">
+                <a href="{% url 'course_detail' course.pk %}">{{ course.name }}</a> - Units: {{ course.credits }}
+                <br>
+                <small>Majors: {{ course.majors.all|join:", " }}</small>
+            </td>
         </tr>
         <tr>
             <th style="width: 40%;">Schedule</th>
