modified:   backend/templates/course_announcements.html 	modified:   backend/templates/course_assignments.html 	modified:   backend/templates/course_grades_professors.html 	modified:   backend/templates/course_grades_students.html 	modified:   backend/templates/course_modules.html 	modified:   backend/templates/course_overview.html 	modified:   backend/templates/course_sidebar.html 	modified:   backend/templates/course_syllabus.html 	modified:   backend/templates/professor_info.html 	modified:   backend/templates/topbar.html

--- a/backend/templates/course_grades_professors.html
+++ b/backend/templates/course_grades_professors.html
@@ -1,4 +1,8 @@
 {% extends 'topbar.html' %}
+{% block hanging_nav %}
+    {% include 'course_sidebar.html' %}
+{% endblock %}
+
 {% block content %}
 <div class="page-container">
     {% include 'course_sidebar.html' %}
