--- a/backend/templates/course_modules.html
+++ b/backend/templates/course_modules.html
@@ -1,4 +1,8 @@
 {% extends 'topbar.html' %}
+{% block hanging_nav %}
+    {% include 'course_sidebar.html' %}
+{% endblock %}
+
 {% block content %}
 <div class="page-container">
     {% include 'course_sidebar.html' %}
